--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy:full": " git add . && git commit -m uibuild && git push"
+    "deploy:full": " git add . && git commit -m uibuild && git push",
+    "lint":"eslint ."
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^3.0.3"
   }
 }
